header-design-changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
     <title>The minion language</title>
    
 </head>
 <body>
-    <h1>Talk the minion language</h1>
+    <h1 class="main-header">banana talk</h1>
     <textarea id="text-enter" placeholder="enter your sentence here"></textarea>
     <button id="btn-translate">Translate</button>
     
