--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
    
 </head>
 <body>
-    <h1 class="main-header">banana talk</h1>
-    <textarea id="text-enter" placeholder="enter your sentence here"></textarea>
-    <button id="btn-translate">Translate</button>
+    <nav class="navigation container">
+        <div class="nav-brand">banana talk</div>
+    </nav>
+
+    <section class="section ow">
+        <div class="container container-center">   
+            <textarea class="input-area" id="text-enter" placeholder="enter your sentence here"></textarea>
+            <button id="btn-translate" class="btn">Translate to banana</button>
+        </div>
+        <div class="trText container-center">Translation will be here 👇 </div>
+        <div id="output" class="op container-center"></div>
+    </section>
+    <footer class="footer">
+        <div class="footer-header">about</div>
+        <p>We all love minions, don't we?
+            here is a translator to convert your text from English to the Minion language or the Banana language.
+        </p>
+        <p>Made by Karthik Raju</p>
+    </footer>
     
-    <div>The translated sentence will be here: </div>
-    <div id="output"></div>
 
     <script src="app.js" type="text/javascript"></script>
 </body>
